--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                         AdviceSlip API
                     </h4>
                     <p class="description">
-                        I built out this advice generator app using an API. It Generate a new piece of advice by
-                        clicking the dice icon
+                        I built out this advice generator app using an API. It generates a new piece of advice by
+                        clicking the dice icon.
                     </p>
                     <a href="https://github.com/emmanuelmav/AdviceGeneratorApp">
                         <i class="fa-brands fa-github fa-2x"></i>
