--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <!-- <img src="https://img.icons8.com/?size=512&id=13679&format=png" alt="java-icon"> -->
                     </h4>
                     <p class="description">
-                        Developed a fullstack application using PHP, Laravel, and MySQL.//Implemented full CRUD (Create,
+                        Developed a fullstack application using PHP, Laravel, and MySQL.Implemented full CRUD (Create,
                         Read,
                         Update, Delete) functionality to allow users to efficiently manage hotel bookings, reservations,
                         customer
