--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     <img class="contact-icons" src="https://img.icons8.com/?size=512&id=13930&format=png" alt="">
 
                     <h4>LinkedIn</h4>
-                    <a href="www.linkedin.com/in/emmalomeka">My Linkedin</a>
+                    <a href="https://www.linkedin.com/in/emmalomeka">My Linkedin</a>
                 </div>
             </div>
         </section>
