--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="btn-wrapper">
                     <a class="btn-1" href="#project">Projects</a>
                     <a class="btn-2"
-                        href="https://drive.google.com/file/d/1Qk-eWJTGrpF47kXXQyTHvXpeuIj_qm3O/view?usp=sharing">Resume</a>
+                        href="https://drive.google.com/file/d/1RQkAp9o5DbejTf55hEV06tJrn7KPk4Dz/view?usp=drive_link">Resume</a>
                 </div>
             </div>
             <img class="hero-img" src="https://i.pinimg.com/originals/c3/18/76/c31876c0f565ae7bba456627dedc9fb7.png"
